--- a/public/index.html
+++ b/public/index.html
@@ -45,12 +45,30 @@
               </div>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-          </form>
+          <div id="notSignedIn">
+          <div class="d-flex">
+            <input class="form-control me-sm-2" type="text" placeholder="Search" id ="txtUserName">
+            <input class="form-control me-sm-2" type="text" placeholder="Search" id ="txtPassword">
+            <button id="btnlogin" class="btn btn-secondary my-2 my-sm-0" type="submit">Login</button> &nbsp; &nbsp;
+            <button id="btnregister" class="btn btn-secondary my-2 my-sm-0" type="submit">Register</button>
+          </div>
+        </div>
+        <div id="signedIn">
+          <ul class="navbar-nav me-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Welcome User</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Separated link</a>
+            </div>
+          </li>
+          </ul>
         </div>
       </div>
+    </div>
     </nav>
     
   </header>
