--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,8 @@
               <input class="form-control me-sm-2" type="text" placeholder="Username" id="txtUserName">
               <input class="form-control me-sm-2" type="text" placeholder="Password" id="txtPassword">
               <button id="btnLogin" class="btn btn-secondary my-2 my-sm-0" type="submit">Login</button> &nbsp; &nbsp;
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Register</button>
+              <button id="btnRegister" class="btn btn-secondary my-2 my-sm-0" type="submit">Register</button>
+              <div class="g-signin2" data-onsuccess="onSignIn"></div>
             </div>
         </div>
           <div id="signedIn">
